--- a/index.html
+++ b/index.html
@@ -1,48 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="script.js"></script>
-    
-    <title>Responsive CSS design</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <title>Responsive CSS</title>
 </head>
+
 <body>
-    
-    <div class="container">
-        <div class="header">
-            <div class="row">
-                <div class="col col-sm col-lg brand">
-                  Header brand
-                </div>
-                <div class="break-header w-100"></div>
-                <div class="col col-sm col-lg global-nav">
-                  Header global-nav
-                </div>
-                <div class="col col-sm col-lg tools">
-                  Hero tools
-                </div>
-              </div>
-        </div>
-        <div class="hero">
-            <div class="row">
-                <div class="col col-sm col-lg-6 hero-feature">
-                  Hero feature
-                </div>
-                <div class="break-hero w-100"></div>
-                <div class="col col-sm col-lg-3 call-to-action">
-                   Hero call-to-action
+
+    <body>
+        <div class="outer-container">
+            <div class="header-container">
+                <div class="header-inner-container">
+                    <div class="brand" href="#">
+                        <img src="images/truck.svg" alt="brand image" width="40" height="40">
+                    </div>
+                    <div class="nav">
+                        <button type="button" class="btn btn-primary">
+                            <a href="#hero">Stiep un krāmē!</a>
+                        </button>
+                        <button type="button" class="btn btn-light">
+                            <a href="#mes">Par mums</a>
+                        </button>
+                        <button type="button" class="btn btn-light">
+                            <a href="#sidebar">Papildus info</a>
+                        </button>
+                    </div>
+                    <div class="tools">
+                        <form action="#">
+                            <input type="text" placeholder="Raksti šeit" name="search">
+                            <button class="button-search">Meklēt</button>
+                        </form>
+                    </div>
                 </div>
             </div>
+            <div class="hero-container">
+                <div class="hero-inner" id="hero">
+                    <div class="hero-feature">
+                        <h1 class="display-1">Mēs stiepsim un krāmēsim!</h1>
+                        <p>Mēs esam stiepšanas un krāmēšanas meistari</p>
+                    </div>
+                    <div class="hero-cta">
+                        <button type="button" class="btn btn-danger">Spied šeit</button>
+                        <span>un mēs stiepsim un krāmēsim!</span>
+                    </div>
+                </div>
+            </div>
+            <div class="body-container">
+                <div class="body-inner-container">
+                    <div class="article-feature">
+                        <h3>
+                            Mums ir liela pieredze pārvākšanās servisa jomā, sākot no maziem dzīvokļiem, un beidzot ar
+                            lielām, valsts konkursos uzvarētām, iestāžu pārvietošanām uz jaunām telpām.
+                        </h3>
+                    </div>
+                    <div class="body-ad">
+                        <img id="reklama" src="/images/krava.jpg" alt="reklama">
+                        <button type="button" class="btn btn-warning">Reklāma</button>
+                    </div>
+                    <div id="mes" class="article-listing">
+                        <h2>Mēs pārvedīsim visas mantas!</h2>
+                        <p>Stiep un krāmē ir personīgo mantu un biroju resursu pārvešanas eksperti ar pieredzi, kuras
+                            pirmsākumi sākās vēl no tiem laikiem, kad profesionālie pārvietošanās pakalpojumi Baltijā
+                            pat nebija pazīstami, un mūsu komandai ir visplašākā pieredze privātās iedzīves pārvešanā
+                            no/uz dzīvokļiem, mājām un rezidencēm. Neatkarīgi vai Jūs pārvācaties Rīgā no punkta A uz
+                            punktu B, vai Jūsu galamērķis ir ārpus Latvijas robežām. Mēs pārceļamies katru dienu un
+                            zinām, kā to izdarīt vislabāk.</p>
+                        <p>Mums ir pieejams viss iepakojamo materiālu klāsts, kāds vien var būt nepieciešams mantu
+                            drošai iepakošanai. Mūsu pakalpojumu klāstam nav limitu, un viss ir atkarīgs no Jūsu vēlmēm
+                            un iespējām - nepieciešamības gadījumā varam piedāvāt tranzīta noliktavas pakalpojumus,
+                            automašīnu, laivu, kuteru, motociklu transportēšanu un vēl daudz ko citu.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="ad-container">
+                <img id="reklama" src="/images/krava.jpg" alt="reklama">
+                <button type="button" class="btn btn-warning">Reklāma</button>
+            </div>
+            <div id="sidebar" class="side-bar-container">
+                <div class="side-bar-feature">
+                    <ul>
+                        <li>Liela pieredze</li>
+                        <li>Profesionāla komanda</li>
+                        <li>Lieliska attieksme</li>
+                        <li>Individuāla pieeja</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-container">
+                <footer id="footer">C 2020</footer>
+            </div>
         </div>
-    </div>
+    </body>
+</body>
 
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
-</body></html>
+</html>
