--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </div>
             </div>
             <div class="footer-container">
-                <footer id="footer">C 2020</footer>
+                <footer id="footer">&copy; 2020</footer>
             </div>
         </div>
     </body>
