Small small improvements

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="hero-container">
                 <div class="hero-inner" id="hero">
                     <div class="hero-feature">
-                        <h1 class="display-1">Mēs stiepsim un krāmēsim!</h1>
+                        <h1>Mēs stiepsim un krāmēsim!</h1>
                         <p>Mēs esam stiepšanas un krāmēšanas meistari</p>
                     </div>
                     <div class="hero-cta">
