--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         </h3>
                     </div>
                     <div class="body-ad">
-                        <img id="reklama" src="images/krava.jpg" alt="reklama">
+                        <img id="body-reklama" src="images/krava.jpg" alt="reklama">
                         <button type="button" class="btn btn-warning">Reklāma</button>
                     </div>
                     <div id="mes" class="article-listing">
